--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             <div class="col-md-6">
               <div class="progress-container progress-primary"><span class="progress-badge">Python (Pandas, Numpy, Matplolib, Seaborn, BeautifulSoup,Requests,JSON)</span>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value"></span>
+                  <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="
+                  " style="width: 100%;"></div><span class="progress-value"></span>
                 </div>
               </div>
             </div>
@@ -357,7 +358,7 @@
               <div class="h5">Private Tutor</div>
                   <ul>
                     <li>Creatively implemented and integrated  new lessons plans to supplement curriculum, resulting in an increased in engagement and productivity</li>
-                    <li>Effectively communicated the complex concepts using microlearning strategies, leading to 100 \% success rate for my students in the official exams</li>
+                    <li>Effectively communicated the complex concepts using microlearning strategies, leading to 100 % success rate for my students in the official exams</li>
                   </ul>
             </div>
           </div>
