--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                           </figcaption>
                           <div class="container-gt">
                             <button class="button-git"><a href="https://github.com/LouayeLamaa/KPMG-Data-Analytics-Virutal-Internship" target ="_blank" rel="tooltip" title=""><i class="fa fa-github fa-3x"></i></a></button>
-                            <button class="button-tableau"><a  href="https://public.tableau.com/app/profile/louaye.lamaa/viz/KPMGVirtualInternship_16303561400670/CustomersDash" target="_blank" rel="tooltip" title=""><span class="iconify-inline" data-icon="logos:tableau"  style="font-size:40px;"></span></a></button>
+                            <button class="button-tableau"><a  href=" " target="_blank" rel="tooltip" title=""><span class="iconify-inline" data-icon="logos:tableau"  style="font-size:40px;"></span></a></button>
                           </div>
                       </figure> </a>
                     </div>
