--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="content-center">
               <div class="cc-profile-image"><a href="#"><img src="images/pp.jpeg" alt="Image"/></a></div>
               <div class="h2 title">Louaye Lamaa</div>
-              <p class="category text-white">Data Analyst</p><a class="btn btn-primary" href="" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Open CV</a>
+              <p class="category text-white">Data Analyst</p><a class="btn btn-primary" href="pdf/LouayeLamaa_CV.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Open CV</a>
             </div>
           </div>
           <div class="section">
@@ -71,6 +71,34 @@
    
   </div>
 
+  <div class="section" id="experience">
+    <div class="container cc-experience">
+      <div class="h4 text-center mb-4 title">Work Experience</div>
+      <div class="card">
+        <div class="row">
+          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+            <div class="card-body cc-experience-header">
+              <p>Oct. 2021 - Present</p>
+              <div class="h5">Supy Inc.</div>
+            </div>
+          </div>
+          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+            <div class="card-body">
+              <div class="h5">Data Analyst/BI Developer</div>
+                  <ul>
+                    <li>Created and maintained executive‑level reports and dashboards using Tableau to provide insights on key performance indicators (KPI) and business performance. </li>
+                    <li>Utilized SQL to clean and organize large data sets for analysis and reporting. </li>
+                    <li>Collaborated with cross‑functional teams to identify areas for improvement and provided data‑driven recommendations to in‑ crease monthly growth and improve customer retention. </li>
+                    <li>Developed and implemented data models and ELT processes in BigQuery to improve data quality, support business growth and improve operational efficiency.  </li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+
+
+
   <div class="section" id="skill">
     <div class="container">
       <div class="h4 text-center mb-4 title">Key Skills</div>
@@ -78,7 +106,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">Python (Pandas, Numpy, Matplolib, Seaborn, BeautifulSoup,Requests,JSON)</span>
+              <div class="progress-container progress-primary"><span class="progress-badge">Data management, modeling, warehousing, and ETL processes (SQL and BigQuery)</span>
                 <div class="progress">
                   <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="
                   " style="width: 100%;"></div><span class="progress-value"></span>
@@ -86,7 +114,7 @@
               </div>
             </div>
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">Problem-Solving <br> Critical Thinking</span>
+              <div class="progress-container progress-primary"><span class="progress-badge">Problem-Solving <br> and Critical Thinking</span>
                 <div class="progress">
                   <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value"></span>
                 </div>
@@ -96,14 +124,14 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">SQL, SQL Server, PostgreSQL</span>
+              <div class="progress-container progress-primary"><span class="progress-badge">Data Visualization (Tableau, Data Studio)</span>
                 <div class="progress">
                   <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value"></span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">Teamwork and Collaboration </span>
+              <div class="progress-container progress-primary"><span class="progress-badge">Adaptability and Team Collaboration </span>
                 <div class="progress">
                   <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value"></span>
                 </div>
@@ -112,14 +140,14 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">Excel (Pivot Table, Conditional Formatting, VLOOKUP)</span>
+              <div class="progress-container progress-primary"><span class="progress-badge">Programming & Statistics (Python and statistical analysis)</span>
                 <div class="progress">
                   <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value"></span>
                 </div>
               </div>
             </div>
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">Organization and Prioritization </span>
+              <div class="progress-container progress-primary"><span class="progress-badge">Communication <br> and Data Interpretation </span>
                 <div class="progress">
                   <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div><span class="progress-value"></span>
                 </div>
@@ -275,23 +303,7 @@
           </div>
         </div>
       </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body cc-education-header">
-              <p>2017-2018</p>
-              <div class="h5">Master's Degree</div>
-            </div>
-          </div>
-          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body">
-              <div class="h5">Master 1 in Biology</div>
-              <p class="category">Lebanese University - Hadat</p>
-
-            </div>
-          </div>
-        </div>
-      </div>
+      
     </div>
   </div>
 
@@ -342,47 +354,6 @@
   </div>
 
 
-  <div class="section" id="experience">
-    <div class="container cc-experience">
-      <div class="h4 text-center mb-4 title">Work Experience</div>
-      <div class="card">
-        <div class="row">
-          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body cc-experience-header">
-              <p>2018 - Present</p>
-              <div class="h5">Freelancer</div>
-            </div>
-          </div>
-          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body">
-              <div class="h5">Private Tutor</div>
-                  <ul>
-                    <li>Creatively implemented and integrated  new lessons plans to supplement curriculum, resulting in an increased in engagement and productivity</li>
-                    <li>Effectively communicated the complex concepts using microlearning strategies, leading to 100 % success rate for my students in the official exams</li>
-                  </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body cc-experience-header">
-              <p>2016</p>
-              <div class="h5">Rachaya Hospital Laboratory</div>
-            </div>
-          </div>
-          <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-            <div class="card-body">
-              <div class="h5">Intern</div>
-              <ul>
-                <li>Accurately prepared, stored, and tested 20 patient samples per day</li>
-                <li>Assisted with maintaining a database of 1000 patients, and preparing data for reports</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
 
     </div>
   </div>
