--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col-md-6">
-              <div class="progress-container progress-primary"><span class="progress-badge">Data management, modeling, warehousing, and ETL processes (SQL and BigQuery)</span>
+              <div class="progress-container progress-primary"><span class="progress-badge">Data management, modeling, warehousing, and ELT processes (SQL and BigQuery)</span>
                 <div class="progress">
                   <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="0" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="
                   " style="width: 100%;"></div><span class="progress-value"></span>
