--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="content-center">
               <div class="cc-profile-image"><a href="#"><img src="images/pp.jpeg" alt="Image"/></a></div>
               <div class="h2 title">Louaye Lamaa</div>
-              <p class="category text-white">Data Analyst</p><a class="btn btn-primary" href="pdf/LouayeLamaa_CV.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Open CV</a>
+              <p class="category text-white">Analytics Engineer</p><a class="btn btn-primary" href="pdf/LouayeLamaa_CV.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Open CV</a>
             </div>
           </div>
           <div class="section">
